--- a/Bilhete.Facil/src/main/resources/templates/cadastro/telefones.html
+++ b/Bilhete.Facil/src/main/resources/templates/cadastro/telefones.html
@@ -71,12 +71,17 @@ html {
 	</div>
 	<br>
 	<h2 align="center">Telefones de Pessoas</h2>
-		<form th:action="@{/addfonePessoa/{pessoaid}(pessoaid=${pessoaOj.id})}" method="POST" class="col s12">
+		<br />
+			<div th:each="m : ${msg}">
+				<span th:text="${m}" style="color: red"></span>
+			</div>
+		<br />
+		<form th:action="@{/addfonePessoa/{pessoaid}(pessoaid=${pessoaOj.id})}" method="POST" class="col s12" onsubmit="return validarCampos()? true : false">
 			<div class="mb-3">
 				<div class="row">
 					<div class="input-field col s6">
 						<label for="numero" class="active">Número:</label>
-						<input class="form-control" id="numero" name="numero" required >
+						<input class="form-control" id="numero" name="numero">
 					</div>
 					<div class="input-field col s6">
 						<label for="tipo" class="active">Tipo:</label>
@@ -118,6 +123,17 @@ html {
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
 		crossorigin="anonymous"></script>
-		
+
+	<script type="text/javascript">
+		function validarCampos() {
+			tipo = document.getElementById('tipo').value;
+
+			if (tipo === '') {
+				alert('Tipo deve ser informado');
+				return false;
+			}
+			return true;
+		}
+	</script>
 </body>
 </html>
