--- a/Bilhete.Facil/bin/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/Bilhete.Facil/bin/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"> <!-- /*IMPORTE DO THYMELEAF*/ --> 
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<!-- xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"> /*IMPORTE DO THYMELEAF*/ --> 
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.css"  media="screen,projection"/> -->
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.min.css"  media="screen,projection"/> -->
-<!-- <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/all.css"> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
+<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> --> 
 <title>Insert title here</title>
-<style type="text/css">
+<!-- <style type="text/css">
 html {
 	margin-left: 8%; 
 	margin-right: 8%;
@@ -25,11 +21,11 @@ html {
 	form input[type=submit] {
 	color: white;		
 }	
-</style>
+</style> -->
 </head>
 <body>
 <div class="container">
-	<h2 align="center">Cadastro de Pessoa</h2>
+	<h2 align="center">Cadastro de Pessoa - ATUALIZADO</h2>
 		<br />
 			<div th:each="m : ${msg}">
 				<span th:text="${m}" style="color: red"></span>
@@ -120,14 +116,14 @@ html {
 		</tbody>
 	</table>
 	</div>
-	<script
+	<!-- <script
 		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
 		crossorigin="anonymous"></script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-		crossorigin="anonymous"></script>
+		crossorigin="anonymous"></script> -->
 		
 </body>
 </html>
