--- a/Bilhete.Facil/bin/src/main/resources/templates/index.html
+++ b/Bilhete.Facil/bin/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link  type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+<!-- <link  type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css"> -->
 <title>Insert title here</title>
 </head>
 <body>
@@ -11,13 +11,13 @@
 
 	<a href="/cadastropessoa">Cadastro de Pessoa</a>
 
-	<script
+	<!-- <script
 		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
 		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
 		crossorigin="anonymous"></script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
 		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-		crossorigin="anonymous"></script>
+		crossorigin="anonymous"></script> -->
 </body>
 </html>
