--- a/Bilhete.Facil/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/Bilhete.Facil/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -6,101 +6,225 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.css"  media="screen,projection"/> -->
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.min.css"  media="screen,projection"/> -->
-<!-- <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/all.css"> -->
+<!-- <link type="text/css" rel="stylesheet" href="../../static/bootstrap-5.1.3-dist/css/bootstrap.min.css"> -->
+ <!-- <link type="text/css" rel="stylesheet" href="//bootstrap-5.1.3-dist/css/bootstrap.min.css" media="screen,projection"/> -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
-<title>Insert title here</title>
+<!-- Adicionando JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+
+<title>Cadastro de Pessoa - Spring + Thymeleaf</title>
 <style type="text/css">
 html {
-	margin-left: 8%; 
+	/* margin-left: 8%; 
 	margin-right: 8%;
-	margin-top: 1%;	
+	margin-top: 1%;	 */
 }	
 	table.table>tbody>tr:nth-child(odd) {
-	background-color: rgba(158, 154, 154, 0.5);
+ 	background-color: rgba(158, 154, 154, 0.5);
 	}
 	
 	form input[type=submit] {
 	color: white;		
-}	
+	}
+	
+	fieldset.fieldset {
+    min-width: 0;
+    padding: -1%; 
+    margin: 0; 
+    border: 8%;  
+   }
+	
 </style>
+<!-- Adicionando Javascript -->
+    <script>
+
+        $(document).ready(function() {
+
+            function limpa_formulário_cep() {
+                // Limpa valores do formulário de cep.
+                $("#rua").val("");
+                $("#bairro").val("");
+                $("#cidade").val("");
+                $("#uf").val("");
+                $("#ibge").val("");
+            }
+            
+            //Quando o campo cep perde o foco.
+            $("#cep").blur(function() {
+
+                //Nova variável "cep" somente com dígitos.
+                var cep = $(this).val().replace(/\D/g, '');
+
+                //Verifica se campo cep possui valor informado.
+                if (cep != "") {
+
+                    //Expressão regular para validar o CEP.
+                    var validacep = /^[0-9]{8}$/;
+
+                    //Valida o formato do CEP.
+                    if(validacep.test(cep)) {
+
+                        //Preenche os campos com "..." enquanto consulta webservice.
+                        $("#rua").val("...");
+                        $("#bairro").val("...");
+                        $("#cidade").val("...");
+                        $("#uf").val("...");
+                        $("#ibge").val("...");
+
+                        //Consulta o webservice viacep.com.br/
+                        $.getJSON("https://viacep.com.br/ws/"+ cep +"/json/?callback=?", function(dados) {
+
+                            if (!("erro" in dados)) {
+                                //Atualiza os campos com os valores da consulta.
+                                $("#rua").val(dados.logradouro);
+                                $("#bairro").val(dados.bairro);
+                                $("#cidade").val(dados.localidade);
+                                $("#uf").val(dados.uf);
+                                $("#ibge").val(dados.ibge);
+                            } //end if.
+                            else {
+                                //CEP pesquisado não foi encontrado.
+                                limpa_formulário_cep();
+                                alert("CEP não encontrado.");
+                            }
+                        });
+                    } //end if.
+                    else {
+                        //cep é inválido.
+                        limpa_formulário_cep();
+                        alert("Formato de CEP inválido.");
+                    }
+                } //end if.
+                else {
+                    //cep sem valor, limpa formulário.
+                    limpa_formulário_cep();
+                }
+            });
+        });
+
+    </script>
 </head>
 <body>
 <div class="container">
 	<h2 align="center">Cadastro de Pessoa</h2>
-		<br />
 			<div th:each="m : ${msg}">
 				<span th:text="${m}" style="color: red"></span>
 			</div>
-		<br />
-		<form action="salvarpessoa" id="formpessoa" method="POST"
-			th:object="${pessoaOj}" class="col s12">
-			<div class="mb-3">
-				<div class="row">
-					<div class="input-fiel col s6">
+		<form action="salvarpessoa" id="formpessoa" method="POST" th:object="${pessoaOj}" class="col s12">
+			<div class="row">
+					<div class="col-md-2">
 						<label for="id" class="active">ID:</label> <input
-							class="form-control" name="id" th:field="*{id}"
+							class="form-control" name="id" th:field="*{id}" id="id"
 							readonly="readonly">
 					</div>
-					<div class="input-fiel col s6">
+					<div class="col-md-10">
 						<label for="nome" class="active">Nome:</label> <input
-							class="form-control" name="nome" th:field="*{nome}">
+							class="form-control" name="nome" th:field="*{nome}" id="nome" required>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s12" >
 						<label for="sobrenome" class="active">Sobrenome:</label> <input
-							class="form-control" name="sobrenome" th:field="*{sobrenome}">
+							class="form-control" id="sobrenome" name="sobrenome" th:field="*{sobrenome}">
+					</div>
+					<div class="input-field col s12" >
+						<label for="documento" class="active">Documento [RG / CPF]:</label> <input
+							class="form-control" id="documento" name="documento" th:field="*{documento}" required>
+					</div>
+				</div>		
+			<!-- CAMPOS DO WEBSERVCE CEP  -->
+				<div class="row">
+					<div class="col-md-4" >
+						<label for="cep" class="active">CEP:</label> <input
+							class="form-control" id="cep" name="cep" th:field="*{cep}">
+					</div>
+					<div class="col-md-8" >
+						<label for="rua" class="active">Rua:</label> <input
+							class="form-control" id="rua" name="rua" th:field="*{rua}">
+					</div>
+				</div>				
+				<div class="row">
+					<div class="input-field col s12" >
+						<label for="bairro" class="active">Bairro:</label> <input
+							class="form-control"  id="bairro" name="bairro" th:field="*{bairro}">
+					</div>
+				</div>				
+				<div class="row">
+					<div class="input-field col s12" >
+						<label for="cidade" class="active">Cidade:</label> <input
+							class="form-control" id="cidade" name="cidade" th:field="*{cidade}">
 					</div>
 				</div>
-				<div class="row" sec:authorize="hasRole('ROLE_CAIXA')">
-					<div class="input-field col s12" > 
+				<div class="row">
+					<div class="input-field col s6" >
+						<label for="uf" class="active">UF:</label> <input
+							class="form-control" id="uf" name="uf" th:field="*{uf}">
+					</div>
+					<div class="input-field col s6" >
+						<label for="ibge" class="active">IBGE:</label> <input
+							class="form-control" id="ibge" name="ibge" th:field="*{ibge}">
+					</div>
+				</div>	
+							
+						
+				<div class="row">
+					<div class="col-md-1" sec:authorize="hasRole('ROLE_CAIXA')"> 
 						<label for="idade" class="active">Idade:</label> <input
-							class="form-control" name="idade" th:field="*{idade}">
+							class="form-control" id="idade" name="idade" th:field="*{idade}">
+					</div>
+
+					<div class="col-md-4">
+						<label for="sexo" >Sexo</label> <select
+							class="form-select" name="sexo" id="sexo" th:field="*{sexo}">
+							<option selected disabled value="">Selecione...</option>
+							<option value="Masculino">Masculino</option>
+							<option value="Feminino">Feminino</option>
+							<option value="Prefiro ñ informar">Prefiro ñ informar</option>
+						</select>
 					</div>
 				</div>
-
-				<div class="col-md-3">
-					<label for="sexo" class="form-label">Sexo</label> <select
-						class="form-select" name="sexo" id="sexo" th:field="*{sexo}">
-						<option selected disabled value="">Selecione...</option>
-						<option value="Masculino">Masculino</option>
-						<option value="Feminino">Feminino</option>
-						<option value="Prefiro ñ informar">Prefiro ñ informar</option>
-					</select>
-				</div>
-
 				<br> <input class="btn btn-success" type="submit"
 					value="Salvar">
 				<!-- https://www.projetojavaweb.com/certificado-aluno/plataforma-curso/aulaatual/473056460/idcurso/1/idvideoaula/690  - 16:00 -->
 				<button class="btn btn-primary"
 					onclick="document.getElementById('formpessoa').reset();">Novo</button>
-			</div>
+			
 		</form>
 		<br>	
-	<form action="pequisarpessoa" method="POST" class="col s12">
-				<div class="mb-3">
+	<form action="pequisarpessoa" method="POST" class="input-field col s12">
 					<div class="row">
-						<div class="input-field col s12">
-							<label for="nomepesquisa" class="active">Pequisa Registro:</label>
-							<input class="form-control" name="nomepesquisa" required>
-							<br>
-							<input class="btn btn-success" type="submit" value="Buscar">
-							<a class="btn btn-primary" href="/listatodos">Lista Pessoas</a>
-						</div>
-					</div>								
-			</div>	
+							<div>
+								<label for="nomepesquisa" class="active" style="font-style: oblique;">Pequisa Registro:</label>							
+							</div>	
+							<div class="col-md-2">
+								<input class="btn btn-success" type="submit" value="Buscar">
+							</div>
+							<div class="col-md-8">
+								<input class="form-control" name="nomepesquisa" required>
+							</div>
+							<div class="col-md-2">
+								<a class="btn btn-primary" href="/listatodos">Lista Pessoas</a>
+							</div>							
+					</div>
 	</form>	
+	<br>
 	<table class="table">
 		<thead>
 			<tr>
 				<th scope="col">Id</th>
 				<th scope="col">Nome</th>
 				<th scope="col">SobreNome</th>
-				<th scope="col">Sexo</th>
-				<th scope="col">Idade</th>				
+				<th scope="col">Doc</th> 
+				<th scope="col">Idade</th>
+				<th scope="col">Sexo</th>				
+				<th scope="col">CEP</th>				
+				<th scope="col">Rua</th>				
+				<th scope="col">Bairro</th>				
+				<th scope="col">Estado</th>
+				<th scope="col">IBGE</th>								
 				<th scope="col">Ações</th>			
 			</tr>
 		</thead>
@@ -109,8 +233,16 @@ html {
 					<td th:text = "${pessoa.id}"></td>
 					<td><a th:href="@{/telefones/{idpessoa}(idpessoa=${pessoa.id})}"><span th:text = "${pessoa.nome}"></span></a></td>
 					<td th:text = "${pessoa.sobrenome}"></td>
-					<td th:text = "${pessoa.sexo}"></td>
+					<td th:text = "${pessoa.documento}"></td>
 					<td th:text = "${pessoa.idade}"></td>
+					<td th:text = "${pessoa.sexo}"></td>
+					<td th:text = "${pessoa.cep}"></td>
+					<td th:text = "${pessoa.rua}"></td>
+					<td th:text = "${pessoa.bairro}"></td>
+					<td th:text = "${pessoa.uf}"></td>
+					<td th:text = "${pessoa.ibge}"></td>
+					
+					
 					<!--  https://www.projetojavaweb.com/certificado-aluno/plataforma-curso/aulaatual/473054551/idcurso/1/idvideoaula/687  = 5:00-->
 				<td>
 					<a th:href="@{/editarpessoa/{idpessoa}(idpessoa=${pessoa.id})}"><i class="fas fa-edit" title="Editar"></i></a>
