--- a/Bilhete.Facil/src/main/resources/templates/cadastro/telefones.html
+++ b/Bilhete.Facil/src/main/resources/templates/cadastro/telefones.html
@@ -4,11 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.css"  media="screen,projection"/> -->
-<!-- <link type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/materialize.min.css"  media="screen,projection"/> -->
-<!-- <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/all.css"> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <title>Spring Boot + Thymeleaf 2021</title>
 <style type="text/css">
 html {
