--- a/Bilhete.Facil/src/main/resources/templates/index.html
+++ b/Bilhete.Facil/src/main/resources/templates/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link  type="text/css" rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- <link  type="text/css" rel="stylesheet" href="//bootstrap-5.1.3-dist/css/bootstrap.min.css"> -->
 <title>Insert title here</title>
 </head>
 <body>
-	<h3>Sistema de Bilhete Fácil, Atualizado !</h3>
+	<br><div></div>
+	<h3>Sistema de Bilhete Fácil, Atualizado ! 2021</h3>
 
 	<a href="/cadastropessoa">Cadastro de Pessoa</a>
 
