Busca por Registro + Selecão por Combo

--- a/Bilhete.Facil/bin/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/Bilhete.Facil/bin/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -79,12 +79,12 @@ html {
 	<form action="pequisarpessoa" method="POST" class="col s12">
 				<div class="mb-3">
 					<div class="row">
-						<div class="input-field col s12">
+						<div>
 							<label for="nomepesquisa" class="active">Pequisa Registro:</label>
-							<input class="form-control" name="nomepesquisa" required>
-							<br>
 							<input class="btn btn-success" type="submit" value="Buscar">
+							<br>
 							<a class="btn btn-primary" href="/listatodos">Lista Pessoas</a>
+				          <input class="form-control" name="nomepesquisa" required>
 						</div>
 					</div>								
 			</div>	
