--- a/Bilhete.Facil/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/Bilhete.Facil/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -14,6 +14,9 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
+            
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+	<link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
 <title>Cadastro de Pessoa - Spring + Thymeleaf</title>
 <style type="text/css">
@@ -56,6 +59,11 @@ html {
     <script>
 
         $(document).ready(function() {
+                
+             	$('#dataNascimento').datepicker({
+             		showOthermonths:true,
+             		format: 'yyyy-mm-dd'
+             	});
 
             function limpa_formulário_cep() {
                 // Limpa valores do formulário de cep.
@@ -140,13 +148,17 @@ html {
 					</div>
 				</div>
 				<div class="row">
-					<div class="input-field col s12" >
+					<div class="col-md-4" >
 						<label for="sobrenome" class="active">Sobrenome:</label> <input
 							class="form-control" id="sobrenome" name="sobrenome" th:field="*{sobrenome}">
 					</div>
-					<div class="input-field col s12" >
+					<div class="col-md-5" >
 						<label for="documento" class="active">Documento [RG / CPF]:</label> <input
 							class="form-control" id="documento" name="documento" th:field="*{documento}" required>
+					</div>
+					<div class="col-md-3">
+						<label for="DataNascimento" >Data de Nascimento</label> 
+						<input class="form-control" type="date" id="DataNascimento" th:field="*{DataNascimento}" name="DataNascimento" placeholder="Data Nasc.">	
 					</div>
 				</div>		
 			<!-- CAMPOS DO WEBSERVCE CEP  -->
@@ -184,21 +196,36 @@ html {
 				</div>	
 							
 						
-				<div class="row">
+				<div class="row" align-items="center">
 					<div class="col-md-1" sec:authorize="hasRole('ROLE_CAIXA')"> 
 						<label for="idade" class="active">Idade:</label> <input
-							class="form-control" id="idade" name="idade" th:field="*{idade}">
+							class="form-control form-control-sm" id="idade" name="idade" th:field="*{idade}">
 					</div>
 
-					<div class="col-md-4">
+					<!-- CARREGABDO VALOR FIXO NO HTML -->	
+					<div class="col-md-2">
 						<label for="sexo" >Sexo</label> <select
 							class="form-select" name="sexo" id="sexo" th:field="*{sexo}">
-							<option selected disabled value="">Selecione...</option>
+							<option selected enable value="">Selecione...</option>
 							<option value="Masculino">Masculino</option>
 							<option value="Feminino">Feminino</option>
 							<option value="Prefiro ñ informar">Prefiro ñ informar</option>
 						</select>
 					</div>
+					<!-- USANDO BUSCA NO BANCO DE DADOS -->
+					<div class="col-md-4">
+						<label for="profissao" style="color: green; align-content: flex-end; font-weight: bold;" >Profissão</label> 
+						<select	class="form-select" name="profissao" id="profissao" th:field="*{profissao}">
+							<option th:each = "p : ${profissoes}" th:value="${p.id}" th:text="${p.descricao}">
+						</select>
+					</div>
+					<!-- USANDO ENUM -->
+					<div class="col-md-5">
+						<label for="cargo" >Cargo</label> 
+						<select	class="form-select" name="cargo" id="cargo" th:field="*{cargo}">
+							<option th:each = "c : ${T(br.com.bilhete.facil.Bilhete.model.Cargo).values()}" th:value="${c.valor}" th:text="${c.nome}">
+						</select>
+					</div>					
 				</div>
 				<br> <input class="btn btn-success" type="submit"
 					value="Salvar">
@@ -211,7 +238,7 @@ html {
 		<fieldset>
 			<legend>Pesquisa de Registros</legend>
 			<form action="pequisarpessoa" method="POST"
-				class="input-field col s12">
+				class="input-field col s12" id="pequisarpessoa">
 				<div class="row">
 					<div class="input-field col s6">
 						<label for="nomepesquisa" class="active"
@@ -229,7 +256,9 @@ html {
 				</div>
 				<div>
 					<input class="btn btn-success" type="submit" value="Buscar">
-					<a class="btn btn-primary" href="/listatodos">Lista Pessoas</a>
+					<a class="btn btn-primary" href="/listatodos">Lista Pessoas</a>		
+																			<!-- USA MESMO METODO PESQUISARPESSOA POREM ENVIADO POR GET  -->			
+					<input class="btn btn-info" type="submit" value="PDF" onclick="document.getElementById('pequisarpessoa').method = 'get'">
 				</div>
 
 			</form>
@@ -243,8 +272,8 @@ html {
 				<th scope="col">SobreNome</th>
 				<th scope="col">Doc</th> 
 				<th scope="col">Idade</th>
-				<th scope="col">Sexo</th>				
-				<th scope="col">CEP</th>				
+				<th scope="col">Sexo</th>
+				<th scope="col">CEP</th>		
 				<th scope="col">Rua</th>				
 				<th scope="col">Bairro</th>				
 				<th scope="col">Estado</th>
